adding the new CV

--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="./assets//imgs/design_name_Abdelrahman_Emad.jpg"/>
+    <link rel="icon" href="./assets/imgs/design_name_Abdelrahman_Emad.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Abdelrahman Emad | Frontend Developer Portfolio - Showcasing creative, user-friendly web applications built with cutting-edge technologies like React and Next.js. Explore my projects, skills, and journey as a passionate front-end developer."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link
+      rel="apple-touch-icon"
+      href="./assets/imgs/design_name_Abdelrahman_Emad.jpg"
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
