editing work section and sliding effect

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       name="description"
       content="Abdelrahman Emad | Frontend Developer Portfolio - Showcasing creative, user-friendly web applications built with cutting-edge technologies like React and Next.js. Explore my projects, skills, and journey as a passionate front-end developer."
     />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
     <title>Abdelrahman Emad</title>
   </head>
   <body>
